--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,4 +1,3 @@
-{% extends 'blog/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -9,27 +8,17 @@
     	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <div class='page-header'>
+        <div class="page-header">
             <h1><a href="/">Django Dope Blog</a></h1>
         </div>
-
-		<div class="content container">
-    		<div class="row">
-        		<div class="col-md-8">
-            		{% block content %}
-                		{% for post in posts %}
-                    		<div class="post">
-                        		<div class="date">
-                        			{{ post.published_date }}
-                    			</div>
-                    			<h2><a href="{% url 'post_detail' pk=post.pk %}	">{{ post.title }}</a></h2>
-                    			<p>{{ post.text|linebreaksbr }}</p>
-                			</div>
-            			{% endfor %}
-            		{% endblock %}
-        		</div>
-    		</div>
-		</div>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                {% block content %}
+                {% endblock %}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
