--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,24 +13,16 @@
             <h1><a href="/">Django Dope Blog</a></h1>
         </div>
 
-		<div class="content container">
-    		<div class="row">
-        		<div class="col-md-8">
-            		{% block content %}
-                		{% for post in posts %}
-                    		<div class="post">
-                        		<div class="date">
-                        			{{ post.published_date }}
-                    			</div>
-                    			<h2><a href="{% url 'post_detail' pk=post.pk %}	">{{ post.title }}</a></h2>
-                    			<p>{{ post.text|linebreaksbr }}</p>
-                			</div>
-            			{% endfor %}
-            		{% endblock %}
-        		</div>
-    		</div>
-		</div>
+		{% block content %}
+            <div class="post">
+                {% if post.published_date %}
+                    <div class="date">
+                        {{ post.published_date }}
+                    </div>
+                {% endif %}
+       			<h2>{{ post.title }}</h2>
+       			<p>{{ post.text|linebreaksbr }}</p>
+   			</div>
+   		{% endblock %}
     </body>
 </html>
-
-
