--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -13,19 +13,12 @@
             <h1><a href="/">Django Dope Blog</a></h1>
         </div>
 
-		{% block content %}
-            <div class="post">
-                {% if post.published_date %}
-                    <div class="date">
-                        {{ post.published_date }}
-                    </div>
-                {% endif %}
-                {% if user.authenticated %}
-                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-                {% endif %}
-       			<h2>{{ post.title }}</h2>
-       			<p>{{ post.text|linebreaksbr }}</p>
-   			</div>
-   		{% endblock %}
+        {% block content %}
+            <h2>New post</h2>
+            <form method="POST" class="post-form">{% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="save btn btn-default">Save</button>
+            </form>
+        {% endblock %}
     </body>
 </html>
